--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="change_picture">Change Picture</string>
     <string name="logo_image">Logo Image</string>
+    <string name="facebook">Facebook</string>
+    <string name="google">Google</string>
 </resources>
